<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:transitionName="@string/transaction_layout"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="none"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general_info_bn"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_total_child"
                        android:text='@string/total_child_bn'
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_last_delivery_date"
                        android:text="@string/last_delivery_date_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_prag_detect"
                        android:text="@string/prag_detect_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_next_delivery_date"
                        android:text="@string/next_delivery_date_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heat_bn"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_heat_date"
                        android:text="@string/date_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_heat_time"
                        android:text="@string/time_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ai_bn"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_ai_date"
                        android:text="@string/date_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_ai_time"
                        android:text="@string/time_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bull_bn"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_bull_id"
                        android:text="@string/id_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_bull_species"
                        android:text="@string/species_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_semean_production_date"
                        android:text="@string/semean_date_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bachur"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_bachur_birth_weight"
                        android:text="@string/birth_weight_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_bachur_gender"
                        android:text="@string/gender_bn"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repro_problem_bn"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_repro_problem"
                        android:text="N/A"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_others"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/tv_others"
                        android:text="N/A"
                        android:textSize="17sp"
                        android:textColor="@color/colorDark"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fav_edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_edit"
        fab:fab_size="mini"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorAccent"
        app:fab_colorRipple="@color/colorBlue"
        app:layout_constraintBottom_toTopOf="@+id/fav_re_ai"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fav_re_ai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_repeat"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>