<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAsh"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLight"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/cow"
                android:transitionName="@string/transaction_image"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_reproduction_info"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:transitionName="@string/transaction_id"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme"
                app:title="@string/title_cow" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_reproduction_info">


        </android.support.v7.widget.RecyclerView>


        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="10dp"-->
            <!--android:elevation="5dp"-->
            <!--app:cardUseCompatPadding="true">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="5dp"-->
                <!--android:text="@string/lorem_ipsum"-->
                <!--android:textSize="15sp"/>-->

        <!--</android.support.v7.widget.CardView>-->


    </android.support.v4.widget.NestedScrollView>


    <com.github.clans.fab.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:id="@+id/fav_add_info"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorAccent"
        app:fab_colorRipple="@color/colorRed"
        app:layout_anchor="@+id/nestedScrollView"
        android:layout_margin="10dp"
        app:layout_anchorGravity="right|bottom" />


</android.support.design.widget.CoordinatorLayout>