<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:text="@string/pic_bn"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/cow"
                        android:id="@+id/img_cow_pic"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_camera"
                            android:padding="10dp"
                            android:background="@drawable/round_green_button"
                            android:text="@string/camera_bn"
                            android:layout_margin="5dp"
                            android:textColor="@color/colorLight"
                            android:textSize="18sp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_camera"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_gallery"
                            android:text="@string/gallery_bn"
                            android:layout_margin="5dp"
                            android:padding="10dp"
                            android:background="@drawable/round_green_button"
                            android:textColor="@color/colorLight"
                            android:textSize="18sp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_gallery"/>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:text="@string/species_bn"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spn_species"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/species_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorDark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:layout_marginTop="20dp"
                        android:text="@string/bdate_bn"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:inputType="date"
                        android:id="@+id/edt_bdate"
                        android:focusable="false"
                        android:hint="@string/date_select_hint_bn"
                        />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:background="@drawable/round_red_button"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorLight"
                android:text="@string/done_button_title_bn"/>

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>